--- a/pom.xml
+++ b/pom.xml
@@ -127,5 +127,12 @@
       <artifactId>deltaspike-core-impl</artifactId>
       <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>2.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
