--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
   <repositories>
     <repository>
       <id>gedoplanPublic</id>
-      <url>http://svn.involva-gruppe.de/nexus/content/groups/public</url>
+      <url>http://service.gedoplan.de/nexus/content/groups/public</url>
     </repository>
   </repositories>
 
   <pluginRepositories>
     <pluginRepository>
       <id>gedoplanPublic</id>
-      <url>http://svn.involva-gruppe.de/nexus/content/groups/public</url>
+      <url>http://service.gedoplan.de/nexus/content/groups/public</url>
     </pluginRepository>
   </pluginRepositories>
 
